--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= render "partials/menu" %>
+    <%= render "partials/notification" %>
     <%= yield %>
   </body>
 </html>
