--- a/app/views/partials/_menu.html.erb
+++ b/app/views/partials/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="ui stackable container menu">
   <div class="item">
-    <img src="http://semantic-ui.com/examples/assets/images/logo.png">
+    <img src="/images/logo.png">
   </div>
   <%= link_to "Libros", libros_path, class: "item" %>
   <div class="item">
